<?xml version="1.0" encoding="utf-8"?>
<resources>
 <string name="app_name">消耗品便利君</string>
 <string name="action_license">ライセンス</string>
 <string name="app_new_name">新しい消耗品の追加</string>
 <string name="action_register">登録</string>
 <string name="action_change">変更</string>

 <string name="image_consumable_pic">消耗品の画像</string>

 <string name="entity_consumable_name">消耗品名</string>
 <string name="entity_consumable_furigana">消耗品名フリガナ</string>
 <string name="entity_consumable_note">備考</string>
 <string name="entity_consumable_price">最安値</string>

 <string name="validator_required">入力してください2</string>
</resources>
