<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".MainActivity">

 <android.support.v7.widget.Toolbar
  android:id="@+id/tool_bar"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:background="?attr/colorPrimary"
  android:minHeight="?attr/actionBarSize"
  app:popupTheme="@style/Theme.AppCompat.Light"/>

 <LinearLayout
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin">

  <android.support.design.widget.TextInputLayout
   android:layout_width="match_parent"
   android:layout_height="wrap_content">

   <android.support.v7.widget.AppCompatEditText
    android:id="@+id/nameEditText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/entity_consumable_name"
    android:inputType="text"/>
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
   android:layout_width="match_parent"
   android:layout_height="wrap_content">

   <android.support.v7.widget.AppCompatEditText
    android:id="@+id/furiganaEditText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/entity_consumable_furigana"
    android:inputType="text"/>
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
   android:layout_width="match_parent"
   android:layout_height="wrap_content">

   <android.support.v7.widget.AppCompatEditText
    android:id="@+id/noteEditText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/entity_consumable_note"/>
  </android.support.design.widget.TextInputLayout>

  <LinearLayout
   android:layout_width="match_parent"
   android:layout_height="wrap_content">

   <ImageView
    android:id="@+id/consumableImageView"
    android:layout_width="160dp"
    android:layout_height="160dp"
    android:contentDescription="@string/image_consumable_pic"
    android:src="@drawable/ic_assignment_turned_in_black_48dp"/>

   <android.support.v7.widget.AppCompatButton
    android:id="@+id/cameraButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/action_change"/>

  </LinearLayout>
 </LinearLayout>
</LinearLayout>
